--- a/BIO.html
+++ b/BIO.html
@@ -33,20 +33,20 @@
             var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(bca, s);
           })();
         </script>
-  <link href="https://www.dropbox.com/s/7dihqxsco7uuvbp/favicon.ico?raw=1" rel="icon" type="image/x-icon">
+  <link href="IMG_5468.PNG" rel="icon" type="image/x-icon">
 </head>
 <body id="return-policy" class="custom">
   <header class="header">
     <div class="store_name image">
       <a href="index.html" title="Reborn">
-          <img src="images/Mudah.png" alt="Reborn">
+          <img src="images/bio.GIF" alt="Mudah">
       </a>
     </div>
     <ul class="header_icons">
       <li class="page_list">
-        <li><a href="index.html">Shop</a></li>
+        <li><a href="ZHOP.html">Shop</a></li>
           <li><a title= "" href= "index.html">Home</a></li>
-          <li><a title="" href="music.html">Music</a></li>
+          <li><a title="" href="1Music.html">Music</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
    
